# hibernacli

./: Cargo.toml  LICENCE.txt  README.md
design/: 00_index.md  01_proposal.md  02_mvp_proposal.md  03_tech_stack_proposal.md  04_modules_proposal.md  05_data_structures_proposal.md  06_user_stories.md
design/diagrams/: architecture_proposal_4.puml  device_factory.puml  initial_architecture.puml  project.puml
src/: cli.rs  lib.rs  macros.rs  main.rs  run.rs
src/adapters/: operations.rs  primary_device.rs
src/core/: device_factories_registry.rs  global_config.rs  operations.rs
src/core/backup/: backup_execution.rs  backup_index.rs  mod.rs  restore_execution.rs
src/core/config/: from_toml.rs  global.rs  mod.rs  to_toml.rs  toml.rs  toml_try_read.rs
src/core/config/global/: devices.rs  load.rs  projects.rs
src/core/device/: archiver.rs  device_factories_registry.rs  extractor.rs  mod.rs  question.rs  secondary_device.rs
src/core/operations/: backup.rs  device.rs  mod.rs  project.rs
src/core/project/: mod.rs  project.rs
src/core/test_utils/: fs.rs  mocks.rs
src/core/util/: buffer_ext.rs  metadata.rs  timestamps.rs
src/devices/: local_file_storage.rs  mounted_folder.rs  tar_entry_ext.rs  unpack_file_in.rs
src/models/: backup_requirement.rs  primary_device.rs  project.rs  question.rs  secondary_device.rs
