[package]
name = "hibernacli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "5.0"
itertools = "0.12.1"
serde = { version="1.0.197", features = ["derive"] }
toml = "0.8.12"

[dev-dependencies]
mockall = "0.12.1"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
